fix(components): fix SwirlSelect tag spacing

--- a/packages/swirl-components/src/components/swirl-select/swirl-select.css
+++ b/packages/swirl-components/src/components/swirl-select/swirl-select.css
@@ -86,7 +86,6 @@
   overflow: hidden;
   width: 100%;
   min-height: 1.375rem;
-  padding-top: var(--s-space-4);
   padding-right: calc(1.5rem + var(--s-space-8));
   flex-wrap: wrap;
   gap: var(--s-space-8);
